[feat] attempt of migrating