@@ -1,11 +1,11 @@
-package com.example.dummyjson.dto;
+/* package com.example.dummyjson.dto;
 
 import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.junit.MockitoJUnitRunner;
 
-import javax.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotNull;
 
 @RunWith(MockitoJUnitRunner.class)
 public class ProductTest {
@@ -15,13 +15,13 @@ public class ProductTest {
         Long expectId = 1L;
         String expectedTitle = "A dummy title";
         String expectedDescription = "A dummy description";
-        Double expectedPrice = new Double("2.1");
+        Double expectedPrice = Double.valueOf("2.1");
 
         Product product1 = new Product();
         product1.setId(1L);
         product1.setTitle("A dummy title");
         product1.setDescription("A dummy description");
-        product1.setPrice(new Double("2.1"));
+        product1.setPrice(Double.valueOf("2.1"));
 
         Assert.assertEquals(expectId, product1.getId());
         Assert.assertEquals(expectedTitle, product1.getTitle());
@@ -29,3 +29,4 @@ public class ProductTest {
         Assert.assertEquals(expectedPrice, product1.getPrice());
     }
 }
+ */
